Master(In Admin)

--- a/views/Partial/header.ejs
+++ b/views/Partial/header.ejs
@@ -7,7 +7,7 @@
       
       -->
 
-      <img width="180" src="../../dist/images/backgrounds/123.png" alt="">
+      <img width="240px" height="140px" class="lds-ripple img-fluid"  src="../../dist/images/logo/logo.png"  alt="">
     </div>
     <!-- Body Wrapper -->
     <div class="page-wrapper" id="main-wrapper" data-layout="horizontal" data-navbarbg="skin6" data-sidebartype="full" data-sidebar-position="fixed" data-header-position="fixed">
@@ -26,7 +26,7 @@
                 <!-- <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/dist/images/logos/dark-logo.svg" class="dark-logo" width="180" alt="" />
                   
                 <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/dist/images/logos/light-logo.svg" class="light-logo"  width="180" alt="" /> -->
-             <img src="/dist/images/logo/Screenshot (267).png" class="light-logo" width="180" alt="Not available">
+           
              
               </a>
             </li>
@@ -42,9 +42,14 @@
 
           <div class="d-block d-lg-none">
             <a href="index.html" class="text-nowrap nav-link">
-              <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/dist/images/logos/dark-logo.svg" width="180" alt="" />
+              <img src="../../dist/images/logo/Screenshot (267).png" id="dd" width="180" alt="">
             </a>
           </div>
+          
+          <div class="d-none d-lg-flex  justify-content-center" style="display: flex; align-items:center; width:100%;">
+            <img src="../../dist/images/logo/Screenshot (267).png" id="dd" width="180" alt="">
+          </div>
+
           <button class="navbar-toggler p-2 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="p-2">
               <i class="ti ti-dots fs-7"></i>
@@ -201,13 +206,13 @@
                       </li>
 
                       <li class="sidebar-item">
-                        <a href="/addTeacher" class="sidebar-link">
+                        <a href="/addcourse" class="sidebar-link">
                           <i class="ti ti-home-2"></i>
                           <span class="hide-menu">Add Course</span>
                         </a>
                       </li>
                       <li class="sidebar-item">
-                        <a href="/Teacher" class="sidebar-link">
+                        <a href="/viewcourse" class="sidebar-link">
                           <i class="ti ti-layout-sidebar"></i>
                           <span class="hide-menu">View Courses</span>
                         </a>
@@ -221,7 +226,7 @@
                         </a>
                       </li>
                       <li class="sidebar-item">
-                        <a href="/Teacher" class="sidebar-link">
+                        <a href="/allSubject" class="sidebar-link">
                           <i class="ti ti-layout-sidebar"></i>
                           <span class="hide-menu">View Subjects</span>
                         </a>
