--- a/views/Partial/head.ejs
+++ b/views/Partial/head.ejs
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="../../dist/images/backgrounds/123.png" />
+    <link rel="shortcut icon" type="image/png" href="../../dist/images/logo/logo.png" />
     <!-- Owl Carousel -->
     <link rel="stylesheet" href="/dist/libs/owl.carousel/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="/style.css">
