--- a/views/Partial/header.ejs
+++ b/views/Partial/header.ejs
@@ -266,7 +266,7 @@
 <!-- ==============-------------view request -------============== -->
 
 <li class="sidebar-item">
-  <a class="sidebar-link" href="/bookingrequest" aria-expanded="false">
+  <a class="sidebar-link" href="/filterequest/Pending" aria-expanded="false">
     <span>
       <i class="ti ti-notebook"></i>
     </span>
