--- a/views/Panel/booking-request.ejs
+++ b/views/Panel/booking-request.ejs
@@ -7,7 +7,7 @@
 
         <label for="filterr">Filter Status</label>
 
-        <select onchange="filterstatus()" class="form-control" name="filter" id="filter">
+        <select style="max-width: 300px;" onchange="filterstatus()" class="form-control" name="filter" id="filter">
           <option value="Pending">--Choose Filter--</option>
           <option value="Pending">Pending</option>
           <option value="Accepted">Accepted</option>
@@ -15,7 +15,7 @@
         </select>
 
 
-        <div class="card card-body" style="padding-top: 20px !important;">
+        <div class="card card-body mt-3" style="padding-top: 20px !important;">
          
 
           <% if(data != []){ %>
