--- a/views/Panel/teacher-subject-detail.ejs
+++ b/views/Panel/teacher-subject-detail.ejs
@@ -87,8 +87,8 @@
 
 
 <script>
-  function onclick(){
-    window.location.href = "/"
+  function cancle(){
+    window.location.href = "/addTeacherSubjectDetail"
   }
 
     function BindSubject(){
