--- a/views/Partial/header.ejs
+++ b/views/Partial/header.ejs
@@ -90,7 +90,7 @@
 
               <% if(type == "Admin"){ %>
               <li class="sidebar-item">
-                <a class="sidebar-link " href="/" aria-expanded="false">
+                <a class="sidebar-link " href="/home" aria-expanded="false">
                   <span>
                     <i class="ti ti-home-2"></i>
                   </span>
@@ -229,6 +229,35 @@
                         <a href="/allSubject" class="sidebar-link">
                           <i class="ti ti-layout-sidebar"></i>
                           <span class="hide-menu">View Subjects</span>
+                        </a>
+                      </li>
+                      
+                    </ul>
+                  </li>
+
+
+
+
+                  <!-- --------========= Client Side========-------------================- -->
+
+                  <li class="sidebar-item">
+                    <a class="sidebar-link has-arrow" href="#" aria-expanded="false">
+                      <span>
+                        <i class="ti ti-home-2"></i>
+                      </span>
+                      <span class="hide-menu">Web Data</span>
+                    </a>
+                    <ul aria-expanded="false" class="collapse first-level">
+                      <li class="sidebar-item">
+                        <a href="/addAAboutUs" class="sidebar-link">
+                          <i class="ti ti-home-2"></i>
+                          <span class="hide-menu">Add AboutUS</span>
+                        </a>
+                      </li>
+                      <li class="sidebar-item">
+                        <a href="/showContactus" class="sidebar-link">
+                          <i class="ti ti-layout-sidebar"></i>
+                          <span class="hide-menu">View ContactUs Requests</span>
                         </a>
                       </li>
                       
