--- a/views/Panel/add-course.ejs
+++ b/views/Panel/add-course.ejs
@@ -9,7 +9,12 @@
 
     <div class="card card-body" style="padding-top: 20px !important;">
 
-      <form action="/Course/setCourse" method="post">
+      <div class="px-4 py-3 border-bottom">
+        <h5 class="card-title fw-semibold mb-0">Add Course</h5>
+      </div>
+
+
+      <form class="mt-5" action="/Course/setCourse" method="post">
         <div class="row">
       
         <div class="form-group col-md-4">
