--- a/views/Panel/add-subject.ejs
+++ b/views/Panel/add-subject.ejs
@@ -9,13 +9,17 @@
 
     <div class="card card-body" style="padding-top: 20px !important;">
 
-      <form action="/Subject/setSubject" method="post">
+      <div class="px-4 py-3 border-bottom">
+        <h5 class="card-title fw-semibold mb-0">Add Subject</h5>
+      </div>
+
+      <form class="mt-5" action="/Subject/setSubject" method="post">
         <div class="row">
       
         <div class="form-group col-md-4">
             <label for="inputState">Department<span class="text-danger ml-1">*</span></label>
             <select onchange="BindSubject()" required name="DepartmentID" id="DepartmentID" class="form-control">
-              <option selected value=" <%= data[0].DepartmentID %> "><%= data[0].DepartmentName %></option>
+              <option disabled selected>--Select Department--</option>
               <% for (d of data){ %>
                 <option value="<%= d.DepartmentID %>">
                   <%= d.DepartmentName %>
